Fixed wisth of textarea/input boxes on mobile

--- a/src/components/CommentsView.module.css
+++ b/src/components/CommentsView.module.css
@@ -88,4 +88,7 @@
     padding-bottom: 1rem;
     border-bottom: 1px solid lightgray;
   }
+  .comments-container textarea {
+    width: calc(100% - 2rem);
+  }
 }
